[gd_scene load_steps=3 format=3 uid="uid://mgi2ekkgo3gi"]

[ext_resource type="Script" path="res://Mechanics/KillZone/kill_zone.gd" id="1_5ffhc"]
[ext_resource type="AudioStream" uid="uid://de071r02u6ge8" path="res://Assets/brackeys_platformer_assets/sounds/hurt.wav" id="2_xs3m5"]

[node name="KillZone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_5ffhc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xs3m5")
volume_db = 5.0
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="killZoneTouched"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
